--- a/veloAE_preprocess_day7.ipynb
+++ b/veloAE_preprocess_day7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,18 +74,18 @@
       "9743  TTTGTTGTCGGATAAA-1 -5.586266 -0.573459\n",
       "\n",
       "[9744 rows x 3 columns]\n",
-      "              Unnamed: 0                  x\n",
-      "0     AAACCCAAGCCGATCC-1           Ectoderm\n",
-      "1     AAACCCAAGTACAGCG-1          Notochord\n",
-      "2     AAACCCAGTGCTGATT-1      Neuroectoderm\n",
-      "3     AAACCCAGTTTGGCTA-1   Primitive streak\n",
-      "4     AAACCCATCACTTGGA-1      Neuroectoderm\n",
-      "...                  ...                ...\n",
-      "9739  TTTGTTGGTAGACGTG-1           Ectoderm\n",
-      "9740  TTTGTTGGTGAGCGAT-1   Cardiac mesoderm\n",
-      "9741  TTTGTTGGTTCTCTAT-1  Paraxial mesoderm\n",
-      "9742  TTTGTTGTCACCTCAC-1   Primitive Streak\n",
-      "9743  TTTGTTGTCGGATAAA-1   Primitive streak\n",
+      "              Unnamed: 0                                      x\n",
+      "0     AAACCCAAGCCGATCC-1                          Neuroectoderm\n",
+      "1     AAACCCAAGTACAGCG-1                              Notochord\n",
+      "2     AAACCCAGTGCTGATT-1            Neuromesodermal progenitors\n",
+      "3     AAACCCAGTTTGGCTA-1            Primitive streak (cluster4)\n",
+      "4     AAACCCATCACTTGGA-1            Neuromesodermal progenitors\n",
+      "...                  ...                                    ...\n",
+      "9739  TTTGTTGGTAGACGTG-1                          Neuroectoderm\n",
+      "9740  TTTGTTGGTGAGCGAT-1                       Cardiac mesoderm\n",
+      "9741  TTTGTTGGTTCTCTAT-1  Lateral/paraxial mesoderm progenitors\n",
+      "9742  TTTGTTGTCACCTCAC-1            Primitive streak (cluster3)\n",
+      "9743  TTTGTTGTCGGATAAA-1            Primitive streak (cluster4)\n",
       "\n",
       "[9744 rows x 2 columns]\n"
      ]
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +233,7 @@
        "9246"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,25 +347,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  CellID                  x\n",
-      "0     AAACCCAAGCCGATCC-1           Ectoderm\n",
-      "1     AAACCCAAGTACAGCG-1          Notochord\n",
-      "2     AAACCCAGTGCTGATT-1      Neuroectoderm\n",
-      "3     AAACCCAGTTTGGCTA-1   Primitive streak\n",
-      "4     AAACCCATCACTTGGA-1      Neuroectoderm\n",
-      "...                  ...                ...\n",
-      "9241  TTTGTTGCATCTCAAG-1   Primitive streak\n",
-      "9242  TTTGTTGGTAGACGTG-1           Ectoderm\n",
-      "9243  TTTGTTGGTGAGCGAT-1   Cardiac mesoderm\n",
-      "9244  TTTGTTGGTTCTCTAT-1  Paraxial mesoderm\n",
-      "9245  TTTGTTGTCACCTCAC-1   Primitive Streak\n",
+      "                  CellID                                      x\n",
+      "0     AAACCCAAGCCGATCC-1                          Neuroectoderm\n",
+      "1     AAACCCAAGTACAGCG-1                              Notochord\n",
+      "2     AAACCCAGTGCTGATT-1            Neuromesodermal progenitors\n",
+      "3     AAACCCAGTTTGGCTA-1            Primitive streak (cluster4)\n",
+      "4     AAACCCATCACTTGGA-1            Neuromesodermal progenitors\n",
+      "...                  ...                                    ...\n",
+      "9241  TTTGTTGCATCTCAAG-1            Primitive streak (cluster4)\n",
+      "9242  TTTGTTGGTAGACGTG-1                          Neuroectoderm\n",
+      "9243  TTTGTTGGTGAGCGAT-1                       Cardiac mesoderm\n",
+      "9244  TTTGTTGGTTCTCTAT-1  Lateral/paraxial mesoderm progenitors\n",
+      "9245  TTTGTTGTCACCTCAC-1            Primitive streak (cluster3)\n",
       "\n",
       "[9246 rows x 2 columns]\n"
      ]
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "veloAE",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -435,8 +434,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
